fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
 
   #ms-menu{
     transform: translateX(-100%)scale(0.1);
-    transition: 0.4s;
+    transition: 0.2s;
     position:fixed;
     z-index:3;
     border-radius: 10%;
